--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 html, body {
     min-height: 100%;
-    background-color: lightblue;
 }
 
 canvas {
@@ -16,26 +15,12 @@ h1 {
     text-align: center;
 }
 
-.cards {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-rows: 100px;
-    column-gap: 50px;
-    row-gap: 50px;
-}
-
 .card {
-    background-color: blue;
-    display: flex;
+    box-shadow: 2px 2px 2px 2px rgb(24, 23, 23);
     opacity: 0;
-    width: 100%;
-    height: 0%;
-    justify-content: center;
-    align-items: center;
 
     font-size: 30px;
     text-decoration: none;
-    color: white;
     border-radius: 10px;
     transition: .5s;
 }
@@ -45,6 +30,6 @@ h1 {
 }
 
 .card:hover {
-    background-color: darkblue;
-    font-size: 50px;
+    box-shadow: 2px 2px 2px 2px black;
+    background-color: lightblue;
 }
