--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,14 @@ h1 {
     box-shadow: 2px 2px 2px 2px black;
     background-color: lightblue;
 }
+
+nav {
+    box-shadow: 0px 0px 5px 0px black;
+}
+
+iframe {
+    width: 100%;
+    height: 200px;
+    pointer-events: none;
+    overflow: hidden;
+}
