--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,7 @@
 html, body {
     min-height: 100%;
-}
-
-canvas {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: -10;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 h1 {
@@ -18,11 +11,16 @@ h1 {
 .card {
     box-shadow: 2px 2px 2px 2px rgb(24, 23, 23);
     opacity: 0;
-
+    max-height: 300px;
     font-size: 30px;
     text-decoration: none;
     border-radius: 10px;
     transition: .5s;
+}
+
+.card-body {
+    text-align: center;
+    overflow: hidden;
 }
 
 .card label {
@@ -39,8 +37,15 @@ nav {
 }
 
 iframe {
-    width: 100%;
-    height: 200px;
+    width: 400%;
+    height: 800px;
     pointer-events: none;
     overflow: hidden;
+    transform: scale(0.25, 0.25) translateX(30%); 
+    
+    transform-origin: top left;
+    position: relative;
+    left: 0px;
+    right: 0px;
 }
+
